# sc3ntist

./: CMakeLists.txt
src/: SCXParser.cpp
src/parser/: SC3StringDecoder.cpp
